src/objects/TPA_Acknowledgment_Log__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent_At__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Sent At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sent_To__c</fullName>
        <label>Email Sent To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Request</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipLabel>TPA Vendor Offering Return Acknowledgment Logs</relationshipLabel>
        <relationshipName>TPA_Acknowledgment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TPA Acknowledgment Log</label>
    <nameField>
        <displayFormat>AckLogNo-{0000}</displayFormat>
        <label>TPA Acknowledgment Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPA Acknowledgment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>